WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
60738
[chromium] compositing tests are failing
https://bugs.webkit.org/show_bug.cgi?id=60738
Summary
[chromium] compositing tests are failing
Andrew Wilson
Reported
2011-05-12 17:03:45 PDT
jamesr thought it may be due to nduca's recent changes, but I'm not positive exactly when the failure began.
http://build.chromium.org/p/chromium.webkit/builders/Webkit%20Vista/builds/2891/steps/webkit_gpu_tests/logs/stdio
Regressions: Unexpected image mismatch : (3) compositing/iframes/composited-iframe-alignment.html = IMAGE compositing/layers-inside-overflow-scroll.html = IMAGE compositing/self-painting-layers.html = IMAGE James, not sure if all of these were due to the same issue or not, but I figure you can reassign as required.
Attachments
Patch
(1.91 KB, patch)
2011-05-13 11:31 PDT
,
Nat Duca
no flags
Details
Formatted Diff
Diff
Patch
(2.86 KB, patch)
2011-05-13 12:01 PDT
,
Nat Duca
no flags
Details
Formatted Diff
Diff
Patch
(3.49 KB, patch)
2011-05-13 12:04 PDT
,
Nat Duca
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Nat Duca
Comment 1
2011-05-13 11:31:49 PDT
Created
attachment 93485
[details]
Patch
James Robinson
Comment 2
2011-05-13 11:53:28 PDT
Comment on
attachment 93485
[details]
Patch whoops!
Nat Duca
Comment 3
2011-05-13 12:01:21 PDT
Created
attachment 93487
[details]
Patch
Nat Duca
Comment 4
2011-05-13 12:04:03 PDT
Created
attachment 93488
[details]
Patch
WebKit Commit Bot
Comment 5
2011-05-13 12:44:34 PDT
The commit-queue encountered the following flaky tests while processing
attachment 93488
[details]
: http/tests/xmlhttprequest/basic-auth.html
bug 51613
(authors:
ap@webkit.org
and
eric@webkit.org
) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 6
2011-05-13 12:48:34 PDT
Comment on
attachment 93488
[details]
Patch Clearing flags on attachment: 93488 Committed
r86454
: <
http://trac.webkit.org/changeset/86454
>
WebKit Commit Bot
Comment 7
2011-05-13 12:48:40 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug