2011-05-13  Nat Duca  <nduca@chromium.org>

Reviewed by James Robinson.

        [chromium] compositing tests are failing
        https://bugs.webkit.org/show_bug.cgi?id=60738

        Remove supression for previously failing compositor tests.

        * platform/chromium/test_expectations.txt:
2011-05-13  Nat Duca  <nduca@chromium.org>

        Reviewed by James Robinson.

        [chromium] compositing tests are failing
        https://bugs.webkit.org/show_bug.cgi?id=60738

        Bind texture before setting its filtering state.

        * platform/graphics/chromium/LayerTilerChromium.cpp:
        (WebCore::LayerTilerChromium::updateFromPixels):

Canonical link: https://commits.webkit.org/76109@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@86454 268f45cc-cd09-0410-ab3c-d52691b4dbfc